--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -483,7 +483,7 @@ QMenuBar#menubar {
 }
 QMenuBar#menubar::item:selected {
     background: transparent;
-    margin-bottom: 2px; 
+    margin-bottom: @menu_hover_padding; 
 }
 
 QComboBox[objectName^="comboBox2_"]{
