--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -24901,6 +24901,349 @@ p, li { white-space: pre-wrap; }
               </widget>
              </widget>
             </widget>
+            <widget class="QWidget" name="page_25">
+             <widget class="QLabel" name="label1_273">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>5</y>
+                <width>1195</width>
+                <height>20</height>
+               </rect>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <family>Ubuntu</family>
+                <pointsize>10</pointsize>
+                <weight>75</weight>
+                <italic>false</italic>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Split</string>
+              </property>
+             </widget>
+             <widget class="QFrame" name="frame1_75">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>25</y>
+                <width>1195</width>
+                <height>180</height>
+               </rect>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::StyledPanel</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <widget class="QLabel" name="label2_274">
+               <property name="geometry">
+                <rect>
+                 <x>10</x>
+                 <y>15</y>
+                 <width>150</width>
+                 <height>17</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Input File:</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+              </widget>
+              <widget class="QTextEdit" name="textEdit_iq_split_input">
+               <property name="enabled">
+                <bool>true</bool>
+               </property>
+               <property name="geometry">
+                <rect>
+                 <x>165</x>
+                 <y>10</y>
+                 <width>845</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="tabChangesFocus">
+                <bool>true</bool>
+               </property>
+              </widget>
+              <widget class="QPushButton" name="pushButton_iq_split_input_load">
+               <property name="geometry">
+                <rect>
+                 <x>1080</x>
+                 <y>10</y>
+                 <width>60</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Load</string>
+               </property>
+              </widget>
+              <widget class="QPushButton" name="pushButton_iq_split_input_select">
+               <property name="geometry">
+                <rect>
+                 <x>1015</x>
+                 <y>10</y>
+                 <width>60</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Select</string>
+               </property>
+              </widget>
+              <widget class="QPushButton" name="pushButton_iq_split_output_select">
+               <property name="geometry">
+                <rect>
+                 <x>1015</x>
+                 <y>40</y>
+                 <width>60</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Select</string>
+               </property>
+              </widget>
+              <widget class="QPushButton" name="pushButton_iq_split_output_load">
+               <property name="geometry">
+                <rect>
+                 <x>1080</x>
+                 <y>40</y>
+                 <width>60</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Load</string>
+               </property>
+              </widget>
+              <widget class="QLabel" name="label2_281">
+               <property name="geometry">
+                <rect>
+                 <x>10</x>
+                 <y>45</y>
+                 <width>150</width>
+                 <height>17</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Output File Template:</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+              </widget>
+              <widget class="QTextEdit" name="textEdit_iq_split_output">
+               <property name="enabled">
+                <bool>true</bool>
+               </property>
+               <property name="geometry">
+                <rect>
+                 <x>165</x>
+                 <y>40</y>
+                 <width>845</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="tabChangesFocus">
+                <bool>true</bool>
+               </property>
+              </widget>
+              <widget class="QPushButton" name="pushButton_iq_split">
+               <property name="geometry">
+                <rect>
+                 <x>550</x>
+                 <y>140</y>
+                 <width>98</width>
+                 <height>30</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Split</string>
+               </property>
+              </widget>
+              <widget class="QLabel" name="label2_157">
+               <property name="geometry">
+                <rect>
+                 <x>10</x>
+                 <y>105</y>
+                 <width>150</width>
+                 <height>17</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Number of Output Files:</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+              </widget>
+              <widget class="QSpinBox" name="spinBox_iq_split">
+               <property name="geometry">
+                <rect>
+                 <x>165</x>
+                 <y>100</y>
+                 <width>61</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="minimum">
+                <number>2</number>
+               </property>
+              </widget>
+              <widget class="QComboBox" name="comboBox_iq_split_data_type">
+               <property name="enabled">
+                <bool>true</bool>
+               </property>
+               <property name="geometry">
+                <rect>
+                 <x>165</x>
+                 <y>70</y>
+                 <width>157</width>
+                 <height>27</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <item>
+                <property name="text">
+                 <string>Complex Float 32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Float/Float 32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Short/Int 16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Int/Int 32</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Byte/Int 8</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Complex Float 64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Complex Int 64</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Complex Int 16</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Complex Int 8</string>
+                </property>
+               </item>
+              </widget>
+              <widget class="QLabel" name="label2_282">
+               <property name="geometry">
+                <rect>
+                 <x>90</x>
+                 <y>75</y>
+                 <width>70</width>
+                 <height>17</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Data Type:</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+              </widget>
+             </widget>
+            </widget>
            </widget>
            <widget class="QPushButton" name="pushButton1_iq_tab_inspection">
             <property name="geometry">
@@ -25517,6 +25860,29 @@ p, li { white-space: pre-wrap; }
              <string>Strip</string>
             </property>
            </widget>
+           <widget class="QPushButton" name="pushButton1_iq_tab_split">
+            <property name="geometry">
+             <rect>
+              <x>220</x>
+              <y>26</y>
+              <width>109</width>
+              <height>27</height>
+             </rect>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>10</pointsize>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
+            <property name="text">
+             <string>Split</string>
+            </property>
+           </widget>
            <zorder>frame2_69</zorder>
            <zorder>frame3_iq</zorder>
            <zorder>label_iq_folder</zorder>
@@ -25547,6 +25913,7 @@ p, li { white-space: pre-wrap; }
            <zorder>frame1_38</zorder>
            <zorder>label1_112</zorder>
            <zorder>pushButton1_iq_tab_strip</zorder>
+           <zorder>pushButton1_iq_tab_split</zorder>
           </widget>
           <widget class="QWidget" name="tab_archive">
            <attribute name="title">
